examples/test/testpolicy13966.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13966
  namespace: namespace386
spec:
  podSelector:
    matchLabels:
      key33: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value37
          key9: value39
      podSelector:
        matchLabels:
          key31: value30
          key34: value47
